# practice-openGL

./: README.md
cmake_project_example/src/: main.cpp
first_opengl_example/: Dependency.cmake
first_opengl_example/src/: main.cpp
opengl_example/: CMakeLists.txt  Dependency.cmake
opengl_example/inc/: Buffer.hpp  Common.hpp  Context.hpp  Image.hpp  Program.hpp  Shader.hpp  Texture.hpp  VertexLayout.hpp
opengl_example/shader/: simple.fs
opengl_example/src/: Image.cpp  Texture.cpp  VertexLayout.cpp  buffer.cpp  buffer.hpp  common.cpp  context.cpp  context.hpp  main.cpp  program.cpp  program.hpp  shader.cpp  shader.hpp  vertex_layout.cpp  vertex_layout.hpp
